# floaty

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src/: routes.ts
src-tauri/: .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/db/migrations/2025-08-17-151852_create_initial_schema/: down.sql  up.sql
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/commands/: mod.rs  reminders.rs
src-tauri/src/db/: config.rs  mod.rs  models.rs  schema.rs
src-tauri/src/services/: scheduler.rs
src/components/: app-sidebar.tsx
src/layouts/: sidebar.tsx
src/routes/: floats.tsx  home.tsx  reminders.tsx
