[package]
name = "floaty"
version = "0.1.0"
description = "A floating reminder app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tokio = { version = "1.47.1", features = ["time", "macros"] }
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

diesel = { version = "2.2.12", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }

log = "0.4"
dotenvy = "0.15"
thiserror = "2.0.16"
min-heap = "1.0.0"
chrono = { version = "0.4.42", features = ["serde"] }
